other/add-default-securitycontext/.chainsaw-test/pod-resources-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  containers:
  - name: pod01-01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  securityContext:
    runAsNonRoot: false
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  containers:
  - name: pod02-01
    image: ghcr.io/kyverno/test-busybox:1.35
