other/add-default-securitycontext/.chainsaw-test/pod-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  containers:
  - name: pod01-01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  securityContext:
    runAsNonRoot: false
  containers:
  - name: pod02-01
    image: ghcr.io/kyverno/test-busybox:1.35
