other/add-default-securitycontext/.chainsaw-test/podcontroller-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: bb-01
          image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: cronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          securityContext:
            runAsGroup: 2000
          containers:
          - name: bb-01
            image: ghcr.io/kyverno/test-busybox:1.35
          restartPolicy: OnFailure
