other/add-default-securitycontext/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-default-securitycontext
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
